; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2500usb.c_rt2500usb_register_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2500usb.c_rt2500usb_register_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2x00_dev = type { i32 }

@USB_MULTI_READ = common dso_local global i32 0, align 4
@USB_VENDOR_REQUEST_IN = common dso_local global i32 0, align 4
@REGISTER_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt2x00_dev*, i32, i32*)* @rt2500usb_register_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt2500usb_register_read(%struct.rt2x00_dev* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.rt2x00_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.rt2x00_dev* %0, %struct.rt2x00_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %9 = load i32, i32* @USB_MULTI_READ, align 4
  %10 = load i32, i32* @USB_VENDOR_REQUEST_IN, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @REGISTER_TIMEOUT, align 4
  %13 = call i32 @rt2x00usb_vendor_request_buff(%struct.rt2x00_dev* %8, i32 %9, i32 %10, i32 %11, i32* %7, i32 4, i32 %12)
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @le16_to_cpu(i32 %14)
  %16 = load i32*, i32** %6, align 8
  store i32 %15, i32* %16, align 4
  ret void
}

declare dso_local i32 @rt2x00usb_vendor_request_buff(%struct.rt2x00_dev*, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @le16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
